# Enterprise

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  LICENSE.md  README.md  STYLE.md  STYLE_2.txt
.github/workflows/: c-cpp.yml  semgrep.yml
Include/: FTypes.h
Include/Core/: FArgumentParser.h  FBitset.h  FConfigParser.h  FMacro.h  FMath.h  FMemory.h
Include/Game/: FEntity.h  FEntityComponentSystem.h  FGame.h
Include/Graphics/: FFramebuffer.h  FImage.h  FPlatform.h  FRenderCommands.h  FRenderContext.h  FRenderPass.h  FVertex.h
Include/IO/: FFile.h
Include/Networking/: FOnlineService.h  FSocket.h
Include/Rendering/: FImage.h  FRHI.h  FRenderer.h  FWSI.h
Include/Rendering/Vulkan/: FImageVulkan.h  FRenderDeviceVulkan.h  FVulkanUtils.h
Include/Resource/: FAsset.h  FPackage.h
Include/Script/: Example.fscript  FScript.h
Misc/: InstallGame.bat  InstallGame.sh
Source/: CMakeLists.txt
Source/Application/: CMakeLists.txt
Source/Application/Public/: FComponent.h  FGame.h  FSystem.h
Source/Audio/Public/: FAudio.h
Source/Core/: CMakeLists.txt  FArgumentParser.c  FConfigParser.c  FHash.c  FHashMap.c  FList.c
Source/Core/Private/: FArgumentParser.c  FArray.c  FConfigParser.c  FFile.c  FHash.c  FHashMap.c  FList.c  FLog.c  FMemory.c  FString.c  FThread.c  FTime.c  enArgumentParser.c  enArray.c  enConfigParser.c  enFile.c  enHash.c  enHashMap.c  enJsmn.c  enJsonParser.c  enList.c  enLog.c  enMD5.c  enMemory.c  enString.c  enThread.c  enTime.c
Source/Core/Public/Core/: FArgumentParser.h  FArray.h  FBitset.h  FConfigParser.h  FExport.h  FFile.h  FHash.h  FHashMap.h  FList.h  FLog.h  FMacro.h  FMath.h  FMatrix.h  FMemory.h  FString.h  FThread.h  FTime.h  FTypes.h  FVector.h  enArgumentParser.h  enArray.h  enBitset.h  enConfigParser.h  enFile.h  enHash.h  enHashMap.h  enJsmn.h  enJsonParser.h  enList.h  enLog.h  enMD5.h  enMacro.h  enMath.h  enMatrix.h  enMemory.h  enString.h  enTime.h  enTypes.h  enVector.h
Source/Game/: FGame.c
Source/Graphics/: CMakeLists.txt  FFramebuffer.c  FImage.c  FRenderContext.c  FRenderContext_Impl.h  FRenderPass.c
Source/Graphics/Context/D3D12/: FRenderDeviceD3D12.cpp
Source/Graphics/Context/Vulkan/: FRenderContextVulkan.c  FRenderDataVulkan.c  FRenderDeviceVulkan.c  FRenderPassVulkan.c  FVulkanExtensions.c
Source/Graphics/Private/: FFramebuffer.c  FGraphicsContext.c  FGraphicsContext_Impl.h  FImage.c  FRenderContext.c  FRenderContext_Impl.h  FRenderPass.c  enMeshParser.c
Source/Graphics/Private/Context/D3D12/: FRenderDeviceD3D12.cpp
Source/Graphics/Private/Context/Vulkan/: FFramebufferVulkan.c  FFramebufferVulkan.h  FGraphicsContextVulkan.c  FGraphicsContextVulkan.h  FGraphicsVulkan.c  FGraphicsVulkan.h  FImageVulkan.c  FRenderContextVulkan.c  FRenderDeviceVulkan.h  FRenderPassVulkan.c  FRenderPassVulkan.h  FVulkanExtensions.c  FVulkanExtensions.h  FVulkanFormats.c  FVulkanFormats.h  FVulkanUtils.h  FWindowVulkan.c  FWindowVulkan.h
Source/Graphics/Private/D3D12/: d3d12renderdata.h
Source/Graphics/Private/Mesh/: enMeshParser.c  enMeshParserGLTF.c  enMeshParserGLTF.h  maginvox.recpak
Source/Graphics/Private/Vulkan/: FFramebufferVulkan.h  FGraphicsVulkan.c  FGraphicsVulkan.h  FImageVulkan.c  FPipelineVulkan.c  FPipelineVulkan.h  FRenderDeviceVulkan.h  FRenderPassVulkan.c  FRenderPassVulkan.h  FVulkanExtensions.c  FVulkanExtensions.h  FVulkanFormats.c  FVulkanFormats.h  FWindowVulkan.c  FWindowVulkan.h  enGraphicsVulkan.c  enGraphicsVulkan.h  enImageVulkan.c  enPipelineVulkan.c  enPipelineVulkan.h  enVulkanBuffer.c  enVulkanBuffer.h  enVulkanExtensions.c  enVulkanExtensions.h  enVulkanFormats.c  enVulkanFormats.h  enVulkanMemoryAllocator.cpp  enVulkanUtils.h  enWindowVulkan.c  enWindowVulkan.h
Source/Graphics/Private/Window/: FWindowWindows.c  FWindowXLib.c  FWindowXcb.c  enWindowWindows.c  enWindowXLib.c  enWindowXcb.c
Source/Graphics/Private/Windows/: FInputWindows.h  FWindowLinuxX11.c  FWindowWindows.c
Source/Graphics/Public/Graphics/: FCamera.h  FCommands.h  FFramebuffer.h  FGraphics.h  FGraphicsContext.h  FImage.h  FMaterial.h  FMesh.h  FMeshConversion.h  FPipeline.h  FPlatform.h  FRenderCommands.h  FRenderContext.h  FRenderPass.h  FScene.h  FShader.h  FVertex.h  FWindow.h  enGraphics.h  enImage.h  enMesh.h  enMeshParser.h  enPipeline.h  enVertex.h  enWindow.h
Source/Graphics/Public/Graphics/Context/D3D12/: d3d12renderdata.h
Source/Graphics/Public/Graphics/Context/Vulkan/: FRenderContextVulkan.h  FRenderPassVulkan.h
Source/Graphics/Public/Graphics/Platform/: FSurface.h
Source/IO/: FFile.c  FLog.c
Source/Input/: CMakeLists.txt
Source/Input/Private/: FInputWindows.c  FInputXcb.c  enInputXLib.c  enInputXcb.c
Source/Input/Public/: FInput.h
Source/Input/Public/Input/: FInput.h  enInput.h
Source/Networking/: CMakeLists.txt  FOnlineService.c  FOnlineServiceEOS.c  FOnlineServiceNull.c  FOnlineServiceSteam.cpp  FSocket.c
Source/Networking/Private/: FOnlineService.c  FOnlineServiceEOS.c  FRichPresenceDiscord.c  FSocket.c
Source/Networking/Public/Networking/: FOnlineService.h  FSocket.h
Source/Rendering/: FRenderer.c
Source/Rendering/D3D12/: FRenderDeviceD3D12.c
Source/Rendering/Vulkan/: FRenderDeviceVulkan.c
Source/Resource/: CMakeLists.txt  FPackage.c
Source/Resource/Private/: FPackage.c  enPackage.c
Source/Resource/Public/Resource/: FAsset.h  FPackage.h  enAsset.h  enPackage.h
Source/Window/: CMakeLists.txt
Source/Window/Private/: FInputWindows.c  FInputWindows.h  FInputXcb.c  FScreenXcb.c  FWindow.c  FWindowLinuxX11.c  FWindowWindows.c  FWindowWindows.h  FWindowXcb.c  FWindowXcb.h  FWindow_Impl.h
Source/Window/Public/: FWindow.h  FWindowExtras.h
Source/Window/Public/Window/: FInput.h  FScreen.h  FWindow.h
Tests/: CMakeLists.txt
Tests/CoreTest/: CMakeLists.txt
Tests/Example/: CMakeLists.txt  InstallGame.sh  main.c
Tests/Example/Config/: config.cfg
Tests/Packager/: CMakeLists.txt  exampleManifest.json  maginvox.datpak  maginvox.recpak  main.c
Tests/Packager/Resources/: MyFile.txt  credits.md
Tests/Sandbox/: CMakeLists.txt  main.c
(+16 files in other folders)
