set(ApplicationSources "")

list(APPEND ApplicationSources
    "FApplication.c")

#add_library(EnterpriseApplication SHARED ${ApplicationSources})
#target_include_directories(EnterpriseApplication PUBLIC "${PROJECT_SOURCE_DIR}/Include/")

#target_link_libraries(EnterpriseApplication EnterpriseCore)
